Fix kustomize overlay issues: OperatorGroup, Java 21, ImageStream triggers

--- a/base/data-producer/deployment.yaml
+++ b/base/data-producer/deployment.yaml
@@ -7,6 +7,10 @@ metadata:
     app: data-producer
     app.kubernetes.io/part-of: amq-streams-cdc-demo
     app.kubernetes.io/component: data-producer
+  annotations:
+    # Trigger redeployment when ImageStream tag changes
+    image.openshift.io/triggers: |-
+      [{"from":{"kind":"ImageStreamTag","name":"data-producer:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"data-producer\")].image"}]
 spec:
   replicas: 1
   selector:
@@ -20,7 +24,8 @@ spec:
     spec:
       containers:
         - name: data-producer
-          image: image-registry.openshift-image-registry.svc:5000/amq-streams-cdc/data-producer:latest
+          # Image will be set by ImageStream trigger - placeholder for initial deployment
+          image: " "
           ports:
             - containerPort: 8080
               name: http
