--- a/quarkus-data-producer/pom.xml
+++ b/quarkus-data-producer/pom.xml
@@ -64,16 +64,10 @@
             <artifactId>quarkus-smallrye-health</artifactId>
         </dependency>
 
-        <!-- OpenShift deployment -->
+        <!-- Kubernetes/OpenShift manifests generation (optional, for local dev) -->
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-openshift</artifactId>
-        </dependency>
-
-        <!-- Container image building -->
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-container-image-jib</artifactId>
+            <artifactId>quarkus-kubernetes</artifactId>
         </dependency>
 
         <!-- REST API for manual triggers and status -->
