--- a/base/data-producer/buildconfig.yaml
+++ b/base/data-producer/buildconfig.yaml
@@ -1,3 +1,18 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: maven-cache
+  namespace: amq-streams-cdc
+  labels:
+    app: data-producer
+    app.kubernetes.io/part-of: amq-streams-cdc-demo
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
@@ -11,7 +26,6 @@ spec:
   source:
     type: Git
     git:
-      # Update this URL to your actual Git repository
       uri: https://github.com/ultraJeffOrg/amq-streams-cdc-demo.git
       ref: main
     contextDir: quarkus-data-producer
@@ -25,6 +39,17 @@ spec:
       env:
         - name: MAVEN_ARGS
           value: "package -DskipTests -Dquarkus.package.jar.type=uber-jar"
+      # Use incremental builds to reuse Maven cache
+      incremental: true
+  # Mount Maven cache PVC for faster builds
+  mountTrustedCA: false
+  resources:
+    limits:
+      memory: 2Gi
+      cpu: "1"
+    requests:
+      memory: 1Gi
+      cpu: 500m
   output:
     to:
       kind: ImageStreamTag
