--- a/base/databases/mysql-deployment.yaml
+++ b/base/databases/mysql-deployment.yaml
@@ -26,6 +26,13 @@ spec:
           ports:
             - containerPort: 3306
               name: mysql
+          env:
+            # Define explicitly for $(VAR) substitution in probes
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-credentials
+                  key: MYSQL_ROOT_PASSWORD
           envFrom:
             - secretRef:
                 name: mysql-credentials
