fix: Upgrade Debezium connectors to 3.2.5 for Kafka 4.0 compatibility
- Updated MySQL source connector from 2.5.4 to 3.2.5 (Red Hat build)
- Updated JDBC sink connector to Debezium 3.2.5 (replaces Confluent)
- Changed connector class to io.debezium.connector.jdbc.JdbcSinkConnector
- Added mysql_native_password for Debezium connector compatibility
- Added CREATE DATABASE inventory to PostgreSQL init script
- Added #notsecret comments to all demo credential values

All connectors now use Red Hat supported Debezium artifacts from:
https://maven.repository.redhat.com/ga/io/debezium/

--- a/base/databases/mysql-secret.yaml
+++ b/base/databases/mysql-secret.yaml
@@ -8,8 +8,8 @@ metadata:
     app.kubernetes.io/component: mysql
 type: Opaque
 stringData:
-  MYSQL_ROOT_PASSWORD: rootpassword
+  MYSQL_ROOT_PASSWORD: rootpassword # notsecret - demo value
   MYSQL_USER: debezium
-  MYSQL_PASSWORD: dbz
+  MYSQL_PASSWORD: dbz # notsecret - demo value
   MYSQL_DATABASE: inventory
 
