--- a/base/databases/postgres-secret.yaml
+++ b/base/databases/postgres-secret.yaml
@@ -9,7 +9,7 @@ metadata:
 type: Opaque
 stringData:
   POSTGRESQL_USER: postgres
-  POSTGRESQL_PASSWORD: postgres
+  POSTGRESQL_PASSWORD: postgres # notsecret - demo value
   POSTGRESQL_DATABASE: inventory
-  POSTGRESQL_ADMIN_PASSWORD: postgres
+  POSTGRESQL_ADMIN_PASSWORD: postgres # notsecret - demo value
 
