--- a/base/databases/mysql-configmap.yaml
+++ b/base/databases/mysql-configmap.yaml
@@ -16,6 +16,8 @@ data:
     expire_logs_days=10
     gtid_mode=ON
     enforce_gtid_consistency=ON
+    # Use mysql_native_password for better connector compatibility
+    default_authentication_plugin=mysql_native_password
   init.sql: |
     -- Products table that we'll be syncing to PostgreSQL
     CREATE TABLE IF NOT EXISTS products (
@@ -26,6 +28,9 @@ data:
         created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
         updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
     );
+    
+    -- Alter debezium user to use mysql_native_password for Debezium compatibility
+    ALTER USER 'debezium'@'%' IDENTIFIED WITH mysql_native_password BY 'dbz'; -- notsecret - demo value
     
     -- Grant permissions to debezium user for CDC
     GRANT SELECT, RELOAD, SHOW DATABASES, REPLICATION SLAVE, REPLICATION CLIENT ON *.* TO 'debezium'@'%';
